name:                process-simple
version:             0.3.1.0
synopsis:            Simple execution of shell commands with either result
-- description:         
homepage:            https://github.com/jcristovao/process-simple
license:             BSD3
license-file:        LICENSE
author:              João Cristóvão
maintainer:          jmacristovao@gmail.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:      System.Process.Simple
                      , System.Exit.Util
  -- other-modules:       
  other-extensions:     OverloadedStrings
  build-depends:        base          >=4.6     && <4.8
                      , process       >=1.1     && <1.3
                      , transformers  >=0.3     && <0.5
                      , either        >=4.1     && <4.2
                      , text          >= 0.11.3 && < 1.3
                      , attoparsec    >= 0.10.4 && < 0.12
                      , containers    >=0.5     && <0.6
                      , deepseq       >=1.3     && <1.4
                      , enclosed-exceptions-either >= 0.1.2 && < 0.2
  hs-source-dirs:       src
  default-language:     Haskell2010
